--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@
 
 .miParrafo{
     font: 12px; 
-    font-family: cursive;
+    font-family: 'Courier New', Courier, monospace;
     font-weight: normal;
 }
 
