Trabajando con Fork
Contribuyendo a proyectos públicos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,7 +54,7 @@ body{
 }
 
 .footer{
-    background-color: darkblue;
+    background-color: darkslateblue;
     color: white;
     font-weight: bold;
     font-size: 18px;
